--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,9 @@
 body{
   background: white;
   display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
   font-family:  -apple-system,
   BlinkMacSystemFont,
   "Segoe UI",
@@ -19,7 +22,7 @@ body{
   color:white;
 }
 .search-btn{
-  width: 200px;
+  width: 400px;
   height: 40px;
   border: 1px solid dodgerblue;
   background-color: white;
